# alias

./: .gitignore  .travis.yml  Cargo.toml  README.md  sample_config.toml
.github/workflows/: ci.yml  release.yml
docs/: sample_config.toml
src/: main.rs
src/config/: mod.rs
src/environment/: autodetect_executable.rs  expand_env.rs  mod.rs
src/handler/: alias_list.rs  default.rs  error.rs  help.rs  mod.rs  passthrough.rs  version.rs
src/process/: mod.rs
