[package]
name = "alias"
version = "0.2.6"
authors = ["Yury Antonov <1390348+yantonov@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.23"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # remove dead code and often times reduces binary size
codegen-units = 1 # to allow for maximum size reduction optimizations
panic = "abort" #  removes the need for this extra unwinding code
